--- a/ui.html
+++ b/ui.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="app">
-        <i-Table highlight-row :columns="columns" :data="data"></i-Table>
+        <i-Table height="400" highlight-row :columns="columns" :data="data"></i-Table>
     </div>
     <script>
     let expand = `
