--- a/ui.html
+++ b/ui.html
@@ -12,7 +12,10 @@
 
 <body>
     <div id="app">
+        <Card>
+        <p slot="title">无边框标题</p>
         <i-Table height="400" highlight-row :columns="columns" :data="data"></i-Table>
+        </Card>
     </div>
     <script>
     let expand = `
