--- a/ui.html
+++ b/ui.html
@@ -12,7 +12,7 @@
 
 <body>
     <div id="app">
-        <Card>
+        <Card padding="0">
         <p slot="title">无边框标题</p>
         <i-Table height="400" highlight-row :columns="columns" :data="data"></i-Table>
         </Card>
