--- a/ui.html
+++ b/ui.html
@@ -13,7 +13,7 @@
 <body>
     <div id="app">
         <Card padding=0>
-        <p slot="title">无边框标题</p>
+        <p slot="title">发现 50 个脚本适用于当前页面</p>
         <i-Table height="400" highlight-row :columns="columns" :data="data"></i-Table>
         </Card>
     </div>
