--- a/ui.html
+++ b/ui.html
@@ -104,206 +104,7 @@
 
     </Modal>
     </div>
-    <script>
-    let expand = `
-    <div>
-    <Row style="margin-bottom: 16px;">
-        <Col span="8">
-        <span class="expand-key">版本：</span>
-        <span class="expand-value">{{ row.version }}</span>
-        </Col>
-        <Col span="8">
-        <span class="expand-key">评分：</span>
-        <span class="expand-value">{{ row.fan_score }}</span>
-        </Col>
-        <Col span="8">
-        <span class="expand-key">总安装量：</span>
-        <span class="expand-value">{{ row.total_installs }}</span>
-        </Col>
-    </Row>
-    <Row>
-        <Col span="24">
-        <span class="expand-key">描述：</span>
-        <span class="expand-value">{{ row.description }}</span>
-        </Col>
-        </Row>
-    </div>
-        `
-    let expandRow = {
-        template: expand,
-        props: {
-            row: Object
-        }
-    }
-    let Tools = {
-        timeagoFormat(time) {
-            return timeago(null, 'zh_CN').format(time)
-        },
-        installUserJs(uri) {
-            let link = parent.document.createElement("a");
-            link.href = uri;
-            link.click();
-        },
-        msg(msg) {
-            app.$Message.info(msg);
-        },
-        dispatchEvent(eventName) {
-            parent.document.getElementById('jae_fetch_userjs').dispatchEvent(new Event(eventName))
-        },
-        //获取油猴缓存好的脚本数据
-        getData() {
-            let data = sessionStorage.getItem('jae_fetch_userjs_cache');
-            data = JSON.parse(data);
-            return data;
-        }
-    }
-    let appEl = document.getElementById('app')
-    let app = new Vue({
-        el: appEl,
-        components: { expandRow },
-        mounted: function() {
-            /*let host =  location.host.split('.').splice(-2).join('.');
-            fetch(`https://greasyfork.org/zh-CN/scripts/by-site/${host}.json`)
-                .then((r) => {
-                    r.json().then((json) => {
-                        this.data = json
-                    })
-                })*/
-            this.data = Tools.getData()
-        },
-        data: {
-            showBody: false,
-            titleIcon: 'chevron-up',
-            count: 0,
-            showDonate:false,
-            //表头
-            columns: [{
-                    type: 'expand',
-                    width: 50,
-                    render: (h, params) => {
-                        return h(expandRow, {
-                            props: {
-                                row: params.row
-                            }
-                        })
-                    }
-                },
-                {
-                    type: 'index',
-                    width: 60,
-                    align: 'center'
-                },
-                {
-                    title: '标题',
-                    key: 'name',
-                    width: '35%',
-                    ellipsis: false,
-                    render: (h, params) => {
-                        return h('span', {
-                            attrs: {
-                                title: params.row.description
-                            },
-                            style: {
-                                cursor: 'pointer'
-                            },
-                            on: {
-                                click: _ => {
-                                    window.open(params.row.url)
-                                }
-                            }
-                        }, params.row.name)
-                    }
-                },
-                {
-                    title: '作者',
-                    render: (h, params) => {
-                        return h('span', {
-                            attrs: {
-                                title: `点击访问${params.row.user.name}主页`
-                            },
-                            style: {
-                                cursor: 'pointer'
-                            },
-                            on: {
-                                click: _ => {
-                                    window.open(params.row.user.url)
-                                }
-                            }
-                        }, params.row.user.name)
-                    }
-                },
-                {
-                    title: '今日安装',
-                    key: 'daily_installs',
-                    sortable: true
-                },
-                {
-                    title: '更新时间',
-                    key: 'code_updated_at',
-                    render: (h, params) => {
-                        return h('span', Tools.timeagoFormat(params.row.code_updated_at))
-                    },
-                    sortable: true
-                },
-                {
-                    title: '操作',
-                    key: 'code_url',
-                    align: 'center',
-                    render: (h, params) => {
-                        return h('div', [
-                            h('Button', {
-                                props: {
-                                    type: 'primary',
-                                    size: 'small',
-                                    icon: 'ios-download-outline'
-                                },
-                                style: {
-                                    marginRight: '5px'
-                                },
-                                on: {
-                                    click: (event) => {
-                                        Tools.msg('脚本安装中...')
-                                        Tools.installUserJs(params.row.code_url)
-                                    }
-                                }
-                            }, '安装')
-                        ])
-                    }
-                }
-            ],
-            //表格数据
-            data: []
-        },
-        watch: {
-            data(val) {
-                this.count = val.length
-            },
-            showBody(val) {
-                if (val) {
-                    //最大化
-                    this.titleIcon = 'chevron-down'
-                    Tools.dispatchEvent('max')
-                } else {
-                    //最小化
-                    this.titleIcon = 'chevron-up'
-                    Tools.dispatchEvent('min')
-                }
-                window.dispatchEvent(new Event('resize'))
-            }
-        },
-        methods: {
-            close() {
-                Tools.dispatchEvent('close')
-            },
-            bodySwitch() {
-                this.showBody = !this.showBody
-            },
-            open(url){
-                window.open(url)
-            }
-        }
-    })
-    </script>
+    <!-- <script type="text/javascript" src="http://www.dev/Show-Site-All-UserJS/ui.js"></script> -->
 </body>
 
 </html>
