--- a/crx/extension/popup.html
+++ b/crx/extension/popup.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="utf-8">
     <title>Show Site All UserJS</title>
+    <style>
+        body {
+            width: 860px;
+            height: 492px;
+            overflow-x: hidden;
+        }
+    </style>
 </head>
 
-<body style="width:860px;height:492px;">
+<body>
     <div id="app">
     
     </div>
