--- a/crx/extension/popup.html
+++ b/crx/extension/popup.html
@@ -17,6 +17,7 @@
     <div id="app">
     
     </div>
+    <script type="text/javascript" src="psl.min.js"></script>
     <script src="popup.js"></script>
 </body>
 
